 * Improved socket performance (would be nice if we could be used as a "hub")
 * "The message is blocked by User Interface Privilege Isolation, Administrative applications that need to see it can allow it through by calling ChangeWindowMessageFilter after making sure the necessary security precautions are in place. "

2008-04-03 MickeM
 * Moved COM init to "core" (from WMI module)
 + Added new Check command: CheckTaskSched Use like so:
     CheckTaskSched +filter-exit-code==1 ShowAll MaxWarn=1 MaxCrit=1

2008-03-21 MickeM
 + Added command line support for process checks
   New option: cmdLine will toggle so full command lines are used instead of just process names.
 + Added regular expression matching to process checks
   New option: match=regexp (match=strings is the default and "old" way)
 + Added substring matching to process checks
   New option: match=substr (match=strings is the default and "old" way)
   This is *NOT* case blind so might be hard to use, plan to add case blindness to it in the future.
 : Sample command: check_nt ... -v PROCSTATE -l cmdLine,match=regexp,.*exp.* -d SHOWALL
 * Ohh yeah... it is 2008 this year... not 2007, fixed a few entries in the  :)
 - BREAKING CHANGE! -- Removed TOOLHELPER API as PSAPI is simpler and toolhelp is really only useful on w9x (which I don't officially support)

2008-03-20 MickeM
 + Added host-lookupos for NSCA server (#149)
 + Added option (cache_hostname=1|0) to cache the NSCA host name (Ie. only lookup once)
 * Fixed service check: check_nt -v SERVICESTATE -l CheckAll so it works as advertised (#150)
 * Fixed issue with check_nt MEMUSE/CPULOAD/UPTIME if something is "broken" they will now return an error instead of "0". (#134)
   Added option debug_skip_data_collection to simulate this (just for kicks)

2008-03-18 MickeM
 * Added some more error messages to the NSCA module
 * Added support for arguments to LUA module.
   syntax: function debug (command, args) -- args is a table with all arguments
