@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,1,19
-#define PRODUCTVER     0,3,1,19
-#define STRFILEVER     _T("0.3.1.19")
-#define STRPRODUCTVER  _T("0.3.1.19")
-#define STRPRODUCTDATE  _T("2008-03-21")
+#define FILEVER        0,3,3,5
+#define PRODUCTVER     0,3,3,5
+#define STRFILEVER     _T("0.3.3.5")
+#define STRPRODUCTVER  _T("0.3.3.5")
+#define STRPRODUCTDATE  _T("2008-06-14")
 #endif // AUTOBUILD_H
